@@ -11,7 +11,7 @@
 }
 \usage{
 deparse(expr, width.cutoff = 60,
-        backtick = mode(expr) \%in\% c("call", "expression", "("),
+        backtick = mode(expr) \%in\% c("call", "expression", "(", "function"),
         control = c("keepInteger", "showAttributes", "keepNA"),
         nlines = -1)
 }
